feat: centralize path configuration and clean up compiler warnings
- Added PathsConfig to GameConfig for dynamic resource path resolution.
- Updated engine_config.json with default path settings.
- Refactored AssetService, EntityFactory, and PlayState to use central path configuration.
- Resolved multiple compiler warnings (unused imports, deprecated list access, potential NPEs, empty catch blocks).
- Fixed method signatures in EntityFactory to maintain compatibility with existing systems.